# SpeedyNote

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PROJECT_README.md  README.md  build-package.sh  build.sh  deploy.sh  docker-compose.yml  tauri.conf.json
.github/workflows/: build-test.yml  build.yml  docker-build.yml
kubernetes/: deployment.yaml
src/: main.rs  note.rs  pdf.rs  server.rs  storage.rs  ui.rs
