[package]
name = "speedynote"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# PDF processing
pdf = "0.9"

# Image processing
image = "0.24"

# File system operations
walkdir = "2.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket for real-time collaboration
warp = "0.3"

# Database for note storage
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

# UI components
eframe = { version = "0.26", features = ["persistence"] }
egui = "0.26"

# Window effects for blur/glass
window-vibrancy = "0.4"

# HTTP server for web interface
warp = "0.3"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fern = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]